# loggia

./: .envrc  .gitignore  .gitlab-ci.yml  .mdlrc  .pre-commit-config.yaml  .tool-versions  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SPEC.md  information.json  mise.toml  mkdocs.yml  pyproject.toml  renovate.json  tox.ini  versions.json
.github/workflows/: ci.yml  docs.yml  release.yml
dev/: 404.html  index.html  objects.inv  sitemap.xml  style.css
dev/CHANGELOG/: index.html
dev/ROADMAP/: index.html
dev/config/: index.html
dev/developpers/contributing/: index.html
dev/presets/: index.html
dev/reference/: index.html
dev/search/: search_index.json
dev/usage/: index.html
docs/: CHANGELOG.md  ROADMAP.md  config.md  index.md  presets.md  reference.md  roadmap.md  usage.md
loggia/: __init__.py  auto.py  base_preset.py  conf.py  constants.py  logger.py  loguru_sink.py  types.py
loggia/_internal/: bootstrap_logger.py  conf.py  env_parsers.py  loguru_stuff.py  presets.py
loggia/filters/: extra_allow.py
loggia/presets/: datadog_normalisation.py  dev.py  gunicorn.py  hypercorn.py  null_preset.py  prod.py  uvicorn.py
loggia/stdlib_formatters/: __init__.py  json_formatter.py  pretty_formatter.py
loggia/structlog_utils/: gunicorn_logger.py  hypercorn_logger.py  processors.py
loggia/utils/: __init__.py  colorsutils.py  dictutils.py  envutils.py  loaderutils.py  logrecordutils.py  strutils.py
mm_logger/: conf.py  constants.py  logger.py  loguru_sink.py  settings.py
mm_logger/_internal/: conf.py
mm_logger/stdlib_formatters/: json_formatter.py  pretty_formatter.py
mm_logger/structlog_utils/: gunicorn_logger.py  hypercorn_logger.py  processors.py
mm_logger/utils/: colorsutils.py
mm_logs/: __init__.py  constants.py  logger.py  loguru_sink.py  settings.py
mm_logs/stdlib_formatters/: __init__.py  base_formatters.py  gunicorn_json_formatter.py  hypercorn_config.py  hypercorn_json_formatter.py  pretty_formatter.py
mm_logs/structlog_utils/: gunicorn_logger.py  hypercorn_logger.py  pretty_console_renderer.py  processors.py
mm_logs/utils/: colorsutils.py  dictutils.py  json.py
mm_utils/: __about__.py  log.py
mm_utils/logging/: hypercorn.py  json.py  loguru_conf.py
mm_utils/logging/formatters/: gunicorn_json_formatter.py  hypercorn_json_formatter.py
mm_utils/logging_utils/: colors.py  constants.py  hypercorn.py  loguru_conf.py  loguru_dd_format.py
mm_utils/logging_utils/firefighter/: logging_settings.py
mm_utils/logging_utils/formatters/: base_formatters.py  gunicorn_json_formatter.py  hypercorn_json_formatter.py  pretty_formatter.py
mm_utils/logging_utils/loguru_utils/: json.py  loguru_conf.py  loguru_dd_format.py
mm_utils/logging_utils/structlog_utils/: gunicorn_logger.py  hypercorn_logger.py  log.py  loguru_sink.py  pretty_console_renderer.py  processors.py
mm_utils/utils/: __init__.py  colorsutils.py  dictutils.py  enumutils.py  fileutils.py  gitutils.py  hashutils.py  listutils.py  loaderutils.py  strutils.py  timeutils.py  urlutils.py
tests/: conftest.py  test_preset.py
tests/fixtures/: main.py
tests/fixtures/hypercorn_app/: app.py  main.py
tests/fixtures/myapp/: __init__.py  app.py  hypercorn_config.py  testlogurusink.py
tests/test_basics/: test_propagate.py
tests/test_filters/: test_extra_allow.py
tests/test_hooks/: excepthook_test_1.py  excepthook_test_2.py  test_hooks.py  threadinghook_test_1.py  threadinghook_test_2.py  unraisablehook_test_1.py  unraisablehook_test_2.py
tests/test_logging_utils/: test_conf.py  test_configuration.py  test_log.py  test_logger.py  test_logging_dictconfig.py  test_loguru.py  test_settings.py  test_structlog_pretty_console_renderer.py  test_structlog_processors.py  test_structlog_processors.py.disabled
tests/test_presets/: test_basic_slots.py  test_completionism.py  test_dynamic_import.py  test_requirements.py
tests/test_usage_docs/: test_usage.py  test_usage_api_trace.py  test_usage_basic.py  test_usage_custom_config.py  test_usage_custom_params.py  test_usage_preset_env.py  test_usage_std_trace.py  test_usage_with_loguru.py
tests/test_util/: test_dictutils.py  test_hashutils.py  test_jsonencoder.py  test_loaderutils.py  test_timeutils.py  test_urlutils.py
tests/util/: test_dictutils.py  test_strutils.py
v0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.0/CHANGELOG/: index.html
v0.3.0/ROADMAP/: index.html
v0.3.0/config/: index.html
v0.3.0/developpers/contributing/: index.html
v0.3.0/presets/: index.html
v0.3.0/reference/: index.html
v0.3.0/search/: search_index.json
v0.3.0/usage/: index.html
v0.3.1/: index.html
v0.3.1/CHANGELOG/: index.html
v0.3.1/ROADMAP/: index.html
